# curobo-mlx

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PROMPT.md  README.md  SESSION_RESTART.md  UPSTREAM_SYNC.md  UPSTREAM_VERSION.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: OPTIMIZATION_REPORT.md  bench_collision.py  bench_fk.py  bench_optimizer.py  bench_pipeline.py  profile_kernels.py  run_all.py
examples/: 00_quickstart.py  01_forward_kinematics.py  02_collision_checking.py  03_ik_solver.py  04_self_collision.py  05_trajectory_optimization.py  06_motion_planning.py  07_benchmark_quick.py
prds/: PRD-00-ARCHITECTURE.md  PRD-01-TORCH-COMPAT.md  PRD-02-KINEMATICS-KERNEL.md  PRD-03-POSE-DISTANCE-KERNEL.md  PRD-04-SELF-COLLISION-KERNEL.md  PRD-05-SPHERE-OBB-KERNEL.md  PRD-06-OPTIMIZER-KERNELS.md  PRD-07-TENSOR-STEP-KERNEL.md  PRD-08-ROBOT-MODEL-ADAPTER.md  PRD-09-ROLLOUT-COSTS.md  PRD-10-OPTIMIZERS.md  PRD-11-HIGH-LEVEL-API.md  PRD-12-PERFORMANCE-PRODUCTION.md  README.md
src/curobo_mlx/: __init__.py  _backend.py  _torch_compat.py
src/curobo_mlx/adapters/: __init__.py  types.py  (+3 more)
tests/: conftest.py  test_collision.py  test_config_loader.py  test_costs.py  test_cross_validation.py  test_curobolib_bridge.py  test_dynamics.py  test_ik_solver.py  test_integration.py  test_kinematics.py  test_lbfgs.py  test_lbfgs_opt.py  test_line_search.py  test_motion_gen.py  test_mppi.py  test_pose_distance.py  test_quaternion.py  test_robot_model.py  test_self_collision.py  test_solver.py  test_stress.py  test_tensor_step.py  test_torch_compat.py  test_trajopt.py
(+37 files in other folders)
